--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<section>
 						<h2>Svelte анімації</h2>
 						<iframe width="750" height="430"
-										src="http://localhost:3000/intro"></iframe>
+										src="https://intense-bayou-59978.herokuapp.com/intro"></iframe>
 				</section>
 				<!--slide 4-->
 				<section>
@@ -87,7 +87,7 @@
 					<section>
 						<div><b>transition</b> - для анімацій появи і зникнення елементів</div>
 						<iframe width="750" height="450"
-										src="http://localhost:3000/transition"></iframe>
+										src="https://intense-bayou-59978.herokuapp.com/transition"></iframe>
 					</section>
 					<section>
 						<ul>
@@ -99,7 +99,7 @@
 							</li>
 						</ul>
 						<iframe width="750" height="450"
-										src="http://localhost:3000/in-out"></iframe>
+										src="https://intense-bayou-59978.herokuapp.com/in-out"></iframe>
 					</section>
 
 					<section>
@@ -107,14 +107,14 @@
 							<b>animate</b> - для анімацій при зміні положення елемента в масиві
 						</div>
 					</section>
-					<section data-background-iframe="http://localhost:3000/animate"></section>
+					<section data-background-iframe="https://intense-bayou-59978.herokuapp.com/animate"></section>
 					<section>
 						<div>
 							<b>use</b> - для складних анімацій які не можна створити стандартними методами
 						</div>
 
 						<iframe width="750" height="450"
-										src="http://localhost:3000/pannable"></iframe>
+										src="https://intense-bayou-59978.herokuapp.com/pannable"></iframe>
 					</section>
 				</section>
 				<section>
@@ -150,7 +150,7 @@ out:fade|blur|fly|slide|scale|draw={params}
 
 					<section>
 						<iframe width="750" height="450"
-										src="http://localhost:3000/fade"></iframe>
+										src="https://intense-bayou-59978.herokuapp.com/fade"></iframe>
 					</section>
 					<section>
 						<b>Вбудовані анімації:</b>
@@ -163,7 +163,7 @@ out:fade|blur|fly|slide|scale|draw={params}
 </code>
 						</pre>
 					</section>
-					<section data-background-iframe="http://localhost:3000/animate"></section>
+					<section data-background-iframe="https://intense-bayou-59978.herokuapp.com/animate"></section>
 
 				</section>
 				<section>
@@ -192,12 +192,12 @@ transition = (node: HTMLElement, params: any) => {
 					<section>
 						<h5>css transition</h5>
 						<iframe width="750" height="450"
-										src="http://localhost:3000/whoosh"></iframe>
+										src="https://intense-bayou-59978.herokuapp.com/whoosh"></iframe>
 					</section>
 					<section>
 						<h5>js transition</h5>
 						<iframe width="750" height="450"
-										src="http://localhost:3000/js-transition"></iframe>
+										src="https://intense-bayou-59978.herokuapp.com/js-transition"></iframe>
 					</section>
 					<section>
 						<h5>css animation</h5>
@@ -217,7 +217,7 @@ animation = (
 </code>
 </pre>
 					</section>
-					<section data-background-iframe="http://localhost:3000/whizz"></section>
+					<section data-background-iframe="https://intense-bayou-59978.herokuapp.com/whizz"></section>
 				</section>
 				<section>
 					<section>
@@ -246,7 +246,7 @@ let action = (
 					<section>
 
 						<iframe width="750" height="450"
-										src="http://localhost:3000/animejs"></iframe>
+										src="https://intense-bayou-59978.herokuapp.com/animejs"></iframe>
 					</section>
 				</section>
 				<section>
@@ -272,14 +272,14 @@ out:send="{{key: number|string}}"
 </pre>
 					</section>
 
-					<section data-background-iframe="http://localhost:3000/crossfade"></section>
+					<section data-background-iframe="https://intense-bayou-59978.herokuapp.com/crossfade"></section>
 				</section>
 				<section>
 					<section>
 						<h4>
 							Sapper (Page transitions)
 						</h4>
-						<a target="_blank" href="http://localhost:3000/page-transitions">Demo</a>
+						<a target="_blank" href="https://intense-bayou-59978.herokuapp.com/page-transitions">Demo</a>
 						<br />
 						<br />
 						<a target="_blank"
@@ -287,7 +287,7 @@ out:send="{{key: number|string}}"
 							Оригінальна стаття
 						</a>
 					</section>
-					<section data-background-iframe="http://localhost:3000/page-transitions"></section>
+					<section data-background-iframe="https://intense-bayou-59978.herokuapp.com/page-transitions"></section>
 
 				</section>
 				<section>
@@ -344,7 +344,7 @@ store = spring(
 </pre>
 					</section>
 
-					<section data-background-iframe="http://localhost:3000/motion">
+					<section data-background-iframe="https://intense-bayou-59978.herokuapp.com/motion">
 
 					</section>
 				</section>
