--- a/index.html
+++ b/index.html
@@ -389,6 +389,9 @@ store = spring(
 						<a href="https://github.com/ryanatkn/awesome-svelte-resources">
 							awesome svelte
 						</a>
+						<a href="https://github.com/BoryaMogila/svelte-animations">
+							Демки
+						</a>
 					</section>
 				</section>
 				<section>
