--- a/index.html
+++ b/index.html
@@ -386,11 +386,13 @@ store = spring(
 						<a href="https://dev.to/buhrmi/svelte-component-transitions-5ie">
 							page transitions
 						</a>
+						<br />
 						<a href="https://github.com/ryanatkn/awesome-svelte-resources">
 							awesome svelte
 						</a>
+						<br />
 						<a href="https://github.com/BoryaMogila/svelte-animations">
-							Демки
+							Demo
 						</a>
 					</section>
 				</section>
