--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ store = spring(
 					</section>
 				</section>
 				<section>
-					<h2 style="margin-top: 100px">Корині посилання</h2>
+					<h2 style="margin-top: 100px">Кориcні посилання</h2>
 					<section style="text-align: left; margin-left: 150px">
 						<a href="https://svelte.dev/">svelte.dev</a>
 						(<a href="https://ru.svelte.dev/">ru.svelte.dev</a>)
@@ -397,7 +397,7 @@ store = spring(
 					</section>
 				</section>
 				<section>
-					<h2>Контактні данні</h2>
+					<h2>Контактні дані</h2>
 					<div>
 						<img src="images/Borys_Mohyla.jpg" width="300" />
 						<section style="text-align: left; margin-left: 150px">
