new examples source

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<section>
 						<h4>Растрові тайли</h4>
 					</section>
-					<section data-background-iframe="http://34.65.150.49:8080/public/dist/leaflet-example.html">
+					<section data-background-iframe="https://map-examples.herokuapp.com/public/dist/leaflet-example.html">
 					</section>
 					<section>
 						<h4>Переваги</h4>
@@ -93,7 +93,7 @@
 					<section>
 						<h4>Векторні тайли</h4>
 					</section>
-					<section data-background-iframe="http://34.65.150.49:8080/public/dist/mapbox-example.html">
+					<section data-background-iframe="https://map-examples.herokuapp.com/public/dist/mapbox-example.html">
 					</section>
 					<section>
 						<h4>Переваги</h4>
@@ -118,7 +118,7 @@
 						</ul>
 					</section>
 				</section>
-				<section data-background-iframe="http://34.65.150.49:8080/public/dist/compare-example.html">
+				<section data-background-iframe="https://map-examples.herokuapp.com/public/dist/compare-example.html">
 				</section>
 				<section>
 					<section>
@@ -127,10 +127,10 @@
 						</h4>
 						<p>GeoJSON — відкритий формат призначений для зберігання географічних структур даних, заснований на JSON</p>
 					</section>
-					<section data-background-iframe="http://34.65.150.49:8080/public/dist/leaflet-regions.html">
+					<section data-background-iframe="https://map-examples.herokuapp.com/public/dist/leaflet-regions.html">
 
 					</section>
-					<section data-background-iframe="http://34.65.150.49:8080/public/dist/mapbox-regions.html">
+					<section data-background-iframe="https://map-examples.herokuapp.com/public/dist/mapbox-regions.html">
 
 					</section>
 				</section>
@@ -143,12 +143,12 @@
 							70000 елементів на карті
 						</h4>
 						<div>
-							<a target="_blank" href="http://34.65.150.49:8080/public/dist/leaflet-points.html">
+							<a target="_blank" href="https://map-examples.herokuapp.com/public/dist/leaflet-points.html">
 								leaflet
 							</a>
 						</div>
 						<div>
-							<a target="_blank" href="http://34.65.150.49:8080/public/dist/mapbox-points.html">
+							<a target="_blank" href="https://map-examples.herokuapp.com/public/dist/mapbox-points.html">
 								mapbox-gl
 							</a>
 						</div>
@@ -158,12 +158,12 @@
 							70000 елементів на карті з кластерізацією
 						</h4>
 						<div>
-							<a target="_blank" href="http://34.65.150.49:8080/public/dist/leaflet-points-clusterization.html">
+							<a target="_blank" href="https://map-examples.herokuapp.com/public/dist/leaflet-points-clusterization.html">
 								leaflet
 							</a>
 						</div>
 						<div>
-							<a target="_blank" href="http://34.65.150.49:8080/public/dist/mapbox-points-clusterization.html">
+							<a target="_blank" href="https://map-examples.herokuapp.com/public/dist/mapbox-points-clusterization.html">
 								mapbox-gl
 							</a>
 						</div>
@@ -173,12 +173,12 @@
 							70000 елементів на карті за допомогою тайлів
 						</h4>
 						<div>
-							<a target="_blank" href="http://34.65.150.49:8080/public/dist/leaflet-points-tiles.html">
+							<a target="_blank" href="https://map-examples.herokuapp.com/public/dist/leaflet-points-tiles.html">
 								leaflet
 							</a>
 						</div>
 						<div>
-							<a target="_blank" href="http://34.65.150.49:8080/public/dist/mapbox-points-tiles.html">
+							<a target="_blank" href="https://map-examples.herokuapp.com/public/dist/mapbox-points-tiles.html">
 								mapbox-gl
 							</a>
 						</div>
@@ -189,13 +189,13 @@
 						<h4>Можливості векторних карт</h4>
 					</section>
 					<section
-						data-background-iframe="http://34.65.150.49:8080/public/dist/mapbox-3d-buildings.html"
+						data-background-iframe="https://map-examples.herokuapp.com/public/dist/mapbox-3d-buildings.html"
 					></section>
 					<section
-						data-background-iframe="http://34.65.150.49:8080/public/dist/mapbox-custom-buildings.html"
+						data-background-iframe="https://map-examples.herokuapp.com/public/dist/mapbox-custom-buildings.html"
 					></section>
 					<section
-						data-background-iframe="http://34.65.150.49:8080/public/dist/mapbox-3d-model.html"
+						data-background-iframe="https://map-examples.herokuapp.com/public/dist/mapbox-3d-model.html"
 					></section>
 				</section>
 				<section>
